--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/actionNotificationItem"
         android:icon="@mipmap/ic_message_text"
         android:orderInCategory="1"
         android:title="@string/menu_item_notification"></item>
